package messages;

message HoughLine 
{
    optional float r = 1;
    optional float t = 2;
    optional float ep0 = 3;
    optional float ep1 = 4;
}

message FieldLine
 {
    optional HoughLine inner = 1;
    optional HoughLine outer = 2;
    optional int32 id = 3;
}

message FieldLines
{
    repeated FieldLine line = 1;
}
